[package]
name = "bup"
version = "0.1.0"
authors = ["Erlend Langseth <3rlendhl@gmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/hecrj/iced.git", branch = "virtual-widgets", features = ["tokio"]}
iced_native = {git = "https://github.com/hecrj/iced.git", branch = "virtual-widgets"}
iced_graphics = {git = "https://github.com/hecrj/iced.git", branch = "virtual-widgets"}
iced_wgpu = {git = "https://github.com/hecrj/iced.git", branch = "virtual-widgets"}
# iced = { version = "0.3", features = ["tokio"]}
# iced_native = "0.4"
# iced_graphics = "0.2"
# iced_wgpu = "0.4"
rdedup-lib = "=3.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "1.7.2"
slog = "2.7.0"
slog-term = "2.8.0"
slog-async = "2.6.0"
anyhow = "1.0"
itertools = "0.10.0"
directories-next = "2"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
ctrlc = "3"
lazy_static = "1.4.0"
chrono = "0.4.19"
argon2 = "0.3.0"
indexmap = {version ="1.7.0", features = ["serde-1"]}

tokio = { version = "1.2", features = ["rt", "fs", "io-util", "time"] }

nfd = "0.0.4"
